assets/css/style.css
* {
    border: none;
    box-sizing: border-box;
    margin: 0;
    padding: 0;
    /* border: 1px solid red; */
}

body {
    color: black;
    font-family: Montserrat, Arial, sans-serif;
    font-weight: 300;
    letter-spacing: 2px;
}

h1 {
    color: black;
}

/* h2 {
    text-decoration: underline;
} */

h2, 
h3 {
    color: white;  
}

h1,
h2,
h3 {
    font-family: Open Sans, Arial, sans-serif;
}

p {
    line-height: 1.4;
    margin-block: 2%;
}

.text-block {
    padding: 5%;
    text-align: center;
    width: 100%;
}

/* Header section */

.header-wrapper {
    display: flex;
    flex-direction: column;
    margin-inline: auto;
    text-align: center;
    width: 100%;
}

.logo {
    font-size: 150%;
    /* justify-content: center; */
    /* padding: 5%; */
    padding: 5% 5% 0%;
    width: 100%;
}

.menu {
    justify-content: center;
    padding: 5%;
    width: 100%;
    /* display: inline-block; 
    text-align: left; */
}

.menu li {
    display: inline-block;
    list-style-type: none;
    /* margin-right: 50px; */ 
    text-align: left;
}

.nav a {
    color: black;
    margin-right: 5px;
}

.active {
    color: gray;
    text-decoration: none;
}

/* Index page - Hero image section */

.section-wrapper {
    display: flex;
    flex-direction: column;
    text-align: center;
    width: 100%;
}

.hero-image {
    background: url(../images/hero-image-medium.jpg) no-repeat center center;
    height: 400px;
    overflow: hidden;
    padding: 4.5%;
    width: 100%;
}

/* Index page - Services Section */

.services {
    color: black;
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    padding-block: 3%;
    margin-inline: 3%;
}

.services div {
    line-height: 1.3;
    margin: 10px;
    padding-top: 0;
    text-align: center;
}

.services h2 {
    color: black;
}

.services p {
    padding-top: 10px;
}

/* About Page - Who Section */

.about-wrapper {
    background-color: #82263e;
    color: white;
    display: flex;
    /* width: 90%; */
    flex-direction: column;
    justify-content: center;
    text-align: center;
}

#about-us-img {
    width: 90%;
    padding: 5%;
}

/* About Page - Location Section */

#location-wrapper {
    background-color: white;
    color: black;
    display: flex;
    flex-direction: column;
}

.location-text {
    padding: 5%;
    text-align: center;
    width: 100%;
}

.location-text h2 {
    color: black;
    justify-content: left;
}

.location-text a {
    color: black;
}

.map-responsive {
    overflow: hidden;
    position: relative;
}

.map-responsive iframe {
    /* left:0;
    top:0; */
    /* position: sticky; */
    /* float: right; */
    /* margin-right: 12%; */
    height: 300px;
    width: 100%;
}

/* RESOURCES PAGE */

.section-wrapper-resources {
    background-color: #82263e;
    color: white;
    /* display: flex;
    flex-direction: column; */
    text-align: center;
    width: 100%;
}

/* .video-container {
    background-color: white;
} */

.section-wrapper-resources h2 {
    padding-bottom: 3%;
}

.section-wrapper-resources > div {
    padding-bottom: 0;
}

.resources-list {
    line-height: 1.4;
    list-style-type: circle;
    padding: 0 5% 5%;
    text-align: center;
    width: 100%;
}

.resources-list li {
    margin-block: 5%;
}

.resources-list a {
    color: white;
}

/* .resources-list a:link {
    color: red;
    text-decoration: solid;
} */

/* Contact page  - Contact form section*/

.contact-form {
    background-color: #82263e;
    color: white;
}

.text-input {
    background: white;
    border: 1px solid grey;
    border-radius: 5px;
    color: #fafafa;
    height: 25px;
    margin: 5px 5px 20px 0px;
    width: 90%;
}

.text-input:hover {
    border-color: black;
}

.submit-button {
    background-color: black;
    border-radius: 5px;
    color: white;
    font-size: 100%;
    margin-block: 20px;
    padding: 10px 15px;
}

.submit-button:hover {
    background-color: white;
    color: black;
}

/* Contact page  - Contact Us section*/

.section-wrapper {
    display: flex;
    flex-direction: column;
}

.contact-us {
    background-color: white;
    display: flex;
    /* width: 100%; */
    flex-direction: row;
    text-align: center;
}

.contact-us h2 {
    color: black;
    padding: 0 5% 3% 5%;
    text-align: center;
    width: 100%;
}

.contact-us h3 {
    color: black;
    font-size: 90%;
}

.contact-us-text {
    padding: 5%;
    text-align: center;
    width: 100%;
}

.section-wrapper-contact-us {
    background-color: white;
    display: flex;
    flex-direction: column;
    text-align: center;
    width: 100%;
}

/* Footer */

.footer-wrapper {
    background-color: gray;
    display: flex;
    height: 60px;
    justify-content: space-evenly;
    text-align: center;
    /* position: fixed; */
    width: 100%;
   
    left: 0;
    bottom: 0;

    padding-top: 12px;
}

.footer-wrapper ul {
    display: flex;
    font-size: 200%;
    justify-content: space-evenly;
    list-style-type: none;
    /* margin: auto 30%; */
}

.footer-wrapper i {
    color: black;
    margin-inline: 10px;
}

.footer-wrapper i:hover {
    color: #82263e;
    text-decoration: underline;
} 

/* Media queries */


/* For tablet screens sizes from 481 - 768px wide */


/* For laptop screens sizes from 768 - 1024px wide */

@media screen and (min-width: 768px) {
    .logo {
        font-size: 130%;
        /* justify-content: center; */
        /* padding: 5%; */
        padding: 3% 3% 0%;
    }
    
    .menu {
        justify-content: center;
        padding: 2%;
        font-size: smaller;
        /* display: inline-block;  */
        /* text-align: left; */
    }
    
    .hero-image {
        padding-top: 2.5%;
    }

    .services {
        flex-direction: row;
    }    
    
    .services div {
        padding-top: 2%;
        width: 33%;
    }

    #about-us-img {
        padding-top: 0;
        width: 50%;
    }

    .map-responsive {
        /* width: 50%; */
        /* display: block; */
        /* text-align: center; */
    }
}

/* For desktop screens sizes from 1025 - 1200px wide */

@media screen and (min-width: 1025px) {
    .logo {
        font-size: 130%;
        /* justify-content: center; */
        /* padding: 5%; */
        padding: 3% 3% 0%;
    }
    
    .menu {
        /* justify-content: center;
        padding: 2%;
        font-size: smaller; */
        /* display: inline-block;  */
        /* text-align: left; */
    }
    
    .hero-image {
        background: url(../images/hero-image-large.jpg) no-repeat center center;
        padding-top: 1.5%;
        overflow: visible;
        background-size: cover;
    } 
    
    /* .services {
        padding-bottom: 0;
    } */

    .services div {
        padding-top: 2%;
        width: 33%;
    }

    .about-wrapper {
        flex-direction: row;
    }

    .about-wrapper .text-block {
        padding-block: 2%;
        width: 65%;
        /* width: 110%; */
    }
 
   /* https://stackoverflow.com/questions/14142378/how-can-i-fill-a-div-with-an-image-while-keeping-it-proportional */
    .about-image {
        display: flex;
        justify-content: center;
        align-items: center;
        overflow: hidden;
        width: 35%;
    }

    #about-us-img {
        width: 100%;
    }

    #location-wrapper {
        flex-direction: row-reverse;
    }

    .location-text {
        width: 65%;
    }

    /* https://stackoverflow.com/questions/14142378/how-can-i-fill-a-div-with-an-image-while-keeping-it-proportional */
    .map-responsive {
        /* flex-direction: row; */
        width: 35%;
        display: flex;
        justify-content: center;
        align-items: center;
        overflow: hidden;
    }

    .section-wrapper-resources {
        display: flex;
        flex-direction: column;
    }

    .section-wrapper-resources .text-block {
            padding-top: 2%;
            /* width: 33%; */
            /* display: flex; */
    }

    .section-wrapper-resources p {
        padding: 0;
        margin: 1%;
    } 

    /* https://www.w3schools.com/howto/howto_css_responsive_iframes.asp */
    .video-container {
        display: flex;
        position: relative;
        overflow: hidden;
        width: 100%;
        padding-top: 56.25%; /* 16:9 Aspect Ratio (divide 9 by 16 = 0.5625) */
        height: 60%;
    }

    .resource-video {
        position: absolute;
        top: 0;
        left: 0;
        bottom: 0;
        right: 0;
        width: 100%;
        height: 100%;
        align-items: center;
    }

    .resources-list {
        padding-block: 0;
        padding-inline: 0;
    }

    .resources-list li {
        margin-block: 3%;
    }

    .section-wrapper-contact {
        display: flex;
        flex-direction: column;
        width: 100%
    }
}
    /* .contact-form {
        width: 70%;
    } */

    /* .contact-us {
        width: 30%;
    } */

/* For extra-large screens sizes from 1201px wide and up */



/* @media screen and (max-width: 1200px)

@media only screen and (min-width: 768px) and (max-width: 959px){
    ...
    }

    /* @media (min-width: 768px) and (max-width: 1023.98px)  */

